--- a/analysis_authors_first.ipynb
+++ b/analysis_authors_first.ipynb
@@ -703,51 +703,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def prepare_categorical_variable_data(df, author_metrics, variable, key_col):\n",
-    "    \"\"\"\n",
-    "    Prepare data for categorical variable comparison plots.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    df : DataFrame\n",
-    "        The original claims dataframe with all columns\n",
-    "    author_metrics : DataFrame \n",
-    "        The author metrics dataframe with first_author_key as index\n",
-    "    variable : str\n",
-    "        The categorical variable column name to analyze\n",
-    "    \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    DataFrame\n",
-    "        Data prepared for plotting with the horizontal bar chart function\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Get unique first author keys and their categorical variable values\n",
-    "    author_variable_mapping = df[[key_col, variable]].drop_duplicates().set_index(key_col)\n",
-    "    \n",
-    "    # Merge the author metrics with the categorical variable values\n",
-    "    combined_data = pd.merge(\n",
-    "        author_metrics, \n",
-    "        author_variable_mapping, \n",
-    "        left_on=key_col, \n",
-    "        right_index=True,\n",
-    "        how='left'\n",
-    "    )\n",
-    "    \n",
-    "    # Group by the categorical variable\n",
-    "    var_grouped = combined_data.groupby(variable).agg({\n",
-    "        **{col: 'sum' for col in assessment_columns},\n",
-    "        'Major claims': 'sum',\n",
-    "        'Articles': 'sum',\n",
-    "    })\n",
-    "    \n",
-    "    # Calculate proportions\n",
-    "    for col in assessment_columns:\n",
-    "        var_grouped[f'{col}_prop'] = var_grouped[col] / var_grouped['Major claims']\n",
-    "    \n",
-    "    return var_grouped"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -942,7 +898,9 @@
     "\n",
     "for variable in all_categorical_variables.keys():\n",
     "    # Group by historical lab status\n",
-    "    var_grouped = prepare_categorical_variable_data(first_author_claims, author_metrics, variable, key_col='first_author_key')\n",
+    "    var_grouped = plot_info.prepare_categorical_variable_data(first_author_claims, author_metrics, variable, \n",
+    "                                                    key_col='first_author_key',\n",
+    "                                                    assessment_columns=assessment_columns)\n",
     "\n",
     "    # Calculate proportions\n",
     "    for col in assessment_columns:\n",
@@ -980,7 +938,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_93114/2257522897.py:30: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_93370/2257522897.py:30: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  medians = to_plot.groupby('Article_bin')['Challenged prop'].median()\n"
      ]
     },
