processing leading author

--- a/analysis_authors_first.ipynb
+++ b/analysis_authors_first.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -303,13 +303,7 @@
     "\n",
     "import plot_info # Does this set the plot style ? Yes it does\n",
     "\n",
-    "assessment_columns = [\n",
-    "    'Unchallenged', \n",
-    "    'Verified', \n",
-    "    'Partially Verified', \n",
-    "    'Mixed', \n",
-    "    'Challenged'\n",
-    "    ]\n",
+    "assessment_columns = plot_info.assessment_columns\n",
     "\n",
     "first_author_claims = pd.read_csv(\"preprocessed_data/first_author_claims.csv\")\n",
     "\n",
@@ -877,7 +871,6 @@
     "                \"title\": \"Assessment of Scientific Claims by Career Stage\",\n",
     "                \"fig_name_prefix\" : \"fig4B_\"\n",
     "                },\n",
-    "            \n",
     "            \"Sex\": {\n",
     "                \"labels\": [\"Female\", \"Male\"], # check if this is correct -> Yes, this is correct\n",
     "                \"title\": \"Assessment of Scientific Claims by Sex\",\n",
