unique metrique function

--- a/analysis_authors_first.ipynb
+++ b/analysis_authors_first.ipynb
@@ -9,287 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>first_author_key</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Major claims</th>\n",
-       "      <th>Articles</th>\n",
-       "      <th>Challenged</th>\n",
-       "      <th>Mixed</th>\n",
-       "      <th>Partially Verified</th>\n",
-       "      <th>Unchallenged</th>\n",
-       "      <th>Verified</th>\n",
-       "      <th>Unchallenged prop</th>\n",
-       "      <th>Verified prop</th>\n",
-       "      <th>Partially Verified prop</th>\n",
-       "      <th>Mixed prop</th>\n",
-       "      <th>Challenged prop</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>abdelsadik a</td>\n",
-       "      <td>Abdelsadik A</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>agaisse h</td>\n",
-       "      <td>Agaisse H</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>aggarwal k</td>\n",
-       "      <td>Aggarwal K</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ao j</td>\n",
-       "      <td>Ao J</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>apidianakis y</td>\n",
-       "      <td>Apidianakis Y</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>284</th>\n",
-       "      <td>zhang zhaolin</td>\n",
-       "      <td>Zhang Zhaolin</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>zhang zhenting</td>\n",
-       "      <td>Zhang Zhenting</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>286</th>\n",
-       "      <td>zhao hw</td>\n",
-       "      <td>Zhao HW</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>287</th>\n",
-       "      <td>zhou z</td>\n",
-       "      <td>Zhou Z</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>288</th>\n",
-       "      <td>zhuang zh</td>\n",
-       "      <td>Zhuang ZH</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>289 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    first_author_key            Name  Major claims  Articles  Challenged  \\\n",
-       "0       abdelsadik a    Abdelsadik A             3         1           0   \n",
-       "1          agaisse h       Agaisse H             6         2           0   \n",
-       "2         aggarwal k      Aggarwal K             2         1           0   \n",
-       "3               ao j            Ao J             3         1           0   \n",
-       "4      apidianakis y   Apidianakis Y             6         3           0   \n",
-       "..               ...             ...           ...       ...         ...   \n",
-       "284    zhang zhaolin   Zhang Zhaolin             1         1           0   \n",
-       "285   zhang zhenting  Zhang Zhenting             1         1           0   \n",
-       "286          zhao hw         Zhao HW             3         1           0   \n",
-       "287           zhou z          Zhou Z             1         1           0   \n",
-       "288        zhuang zh       Zhuang ZH             6         2           0   \n",
-       "\n",
-       "     Mixed  Partially Verified  Unchallenged  Verified  Unchallenged prop  \\\n",
-       "0        0                   0             3         0           1.000000   \n",
-       "1        0                   0             2         4           0.333333   \n",
-       "2        0                   0             0         2           0.000000   \n",
-       "3        0                   0             1         2           0.333333   \n",
-       "4        0                   0             4         2           0.666667   \n",
-       "..     ...                 ...           ...       ...                ...   \n",
-       "284      0                   0             0         1           0.000000   \n",
-       "285      0                   0             1         0           1.000000   \n",
-       "286      0                   0             2         1           0.666667   \n",
-       "287      0                   0             0         1           0.000000   \n",
-       "288      0                   1             1         4           0.166667   \n",
-       "\n",
-       "     Verified prop  Partially Verified prop  Mixed prop  Challenged prop  \n",
-       "0         0.000000                 0.000000         0.0              0.0  \n",
-       "1         0.666667                 0.000000         0.0              0.0  \n",
-       "2         1.000000                 0.000000         0.0              0.0  \n",
-       "3         0.666667                 0.000000         0.0              0.0  \n",
-       "4         0.333333                 0.000000         0.0              0.0  \n",
-       "..             ...                      ...         ...              ...  \n",
-       "284       1.000000                 0.000000         0.0              0.0  \n",
-       "285       0.000000                 0.000000         0.0              0.0  \n",
-       "286       0.333333                 0.000000         0.0              0.0  \n",
-       "287       1.000000                 0.000000         0.0              0.0  \n",
-       "288       0.666667                 0.166667         0.0              0.0  \n",
-       "\n",
-       "[289 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -307,46 +29,8 @@
     "\n",
     "first_author_claims = pd.read_csv(\"preprocessed_data/first_author_claims.csv\")\n",
     "\n",
-    "# Map assessment types to standardized categories\n",
-    "first_author_claims['assessment_type_grouped'] = first_author_claims['assessment_type'].apply(plot_info.group_assessment)\n",
-    "\n",
-    "\n",
-    "# Create base aggregation with name, counts, and article counts\n",
-    "author_base = first_author_claims.groupby('first_author_key').agg(**{\n",
-    "    \"Name\":('Name', 'first'),\n",
-    "    \"Major claims\":('id', 'count'),\n",
-    "    \"Articles\":('article_id', 'nunique')\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "# Create a cross-tabulation of first_author_key and assessment_type_grouped\n",
-    "assessment_counts = pd.crosstab(\n",
-    "    first_author_claims['first_author_key'], \n",
-    "    first_author_claims['assessment_type_grouped']\n",
-    ")\n",
-    "\n",
-    "# Make sure all assessment columns exist (some might be missing if no authors had that type)\n",
-    "for col in assessment_columns:\n",
-    "    if col not in assessment_counts.columns:\n",
-    "        assessment_counts[col] = 0\n",
-    "\n",
-    "# Combine the base metrics with assessment counts\n",
-    "author_metrics = pd.concat([author_base, assessment_counts], axis=1)\n",
-    "\n",
-    "\n",
-    "for col in assessment_columns:\n",
-    "    author_metrics[f'{col} prop'] = author_metrics[col] / author_metrics['Major claims']\n",
-    "\n",
-    "author_metrics = author_metrics.reset_index()\n",
-    "author_metrics"
+    "author_metrics = plot_info.create_author_metric(df=first_author_claims, variable='first_author_key', other_col={\"Name\":('Name', 'first')})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
