--- a/preprocess_db.ipynb
+++ b/preprocess_db.ipynb
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
     "\n",
     "claims.to_csv('preprocessed_data/claims_db.csv')\n",
     "\n",
-    "string_columns = claims.select_dtypes(include='object').columns.drop([\"assessment_type\", \"journal_name\"])\n",
+    "string_columns = claims.select_dtypes(include='object').columns.drop([\"assessment_type\", \"journal_name\", \"primary_affiliation\"])\n",
     "claims_truncated = claims.copy()\n",
     "for col in string_columns:\n",
     "    if col in claims_truncated.columns:\n",
@@ -2211,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
