--- a/analysis_claims.ipynb
+++ b/analysis_claims.ipynb
@@ -519,34 +519,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "assessment_type                      \n",
-       "Verified                                 559\n",
-       "Unchallenged, logically consistent       111\n",
-       "Unchallenged                             107\n",
-       "Partially verified                        75\n",
-       "Verified by same authors                  44\n",
-       "Challenged by reproducibility project     38\n",
-       "Challenged                                26\n",
-       "Unchallenged, logically inconsistent      22\n",
-       "Mixed                                     12\n",
-       "Verified by reproducibility project        7\n",
-       "Challenged by same authors                 5\n",
+       "year  \n",
+       "2008.0    106\n",
+       "2006.0    101\n",
+       "2009.0    100\n",
+       "2005.0     88\n",
+       "2007.0     86\n",
+       "2004.0     74\n",
+       "2002.0     58\n",
+       "2010.0     55\n",
+       "2000.0     54\n",
+       "2003.0     53\n",
+       "2001.0     49\n",
+       "1996.0     28\n",
+       "1995.0     21\n",
+       "1999.0     19\n",
+       "1998.0     17\n",
+       "1997.0     16\n",
+       "2011.0     14\n",
+       "1994.0     14\n",
+       "1993.0     13\n",
+       "1992.0     11\n",
+       "1990.0      7\n",
+       "1991.0      3\n",
+       "1985.0      3\n",
+       "1960.0      2\n",
+       "1983.0      2\n",
+       "1979.0      2\n",
+       "1978.0      2\n",
+       "1977.0      2\n",
+       "1969.0      2\n",
+       "1959.0      2\n",
+       "1986.0      1\n",
+       "1974.0      1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "major_claims_df[[\"assessment_type\"]].value_counts()"
+    "major_claims_df[[\"year\"]].value_counts()"
    ]
   },
   {
@@ -579,13 +600,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_41546/892573795.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_95363/892573795.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  major_claims_df.loc[:, 'journal_category'] = major_claims_df['impact_factor'].apply(plot_info.categorize_journal)\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_41546/892573795.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_95363/892573795.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4220,7 +4241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4336,7 +4357,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/chadi/Research/drosophila-reproducibility/plot_info.py:1381: UserWarning:\n",
+      "/Users/chadi/Research/drosophila-reproducibility/plot_info.py:1399: UserWarning:\n",
       "\n",
       "This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
       "\n"
