--- a/preprocess_xlsx.ipynb
+++ b/preprocess_xlsx.ipynb
@@ -122,13 +122,13 @@
        "      <th>699</th>\n",
        "      <td>718</td>\n",
        "      <td>1921</td>\n",
-       "      <td>Promislow D</td>\n",
+       "      <td>Promislow DE</td>\n",
        "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Junior PI</td>\n",
        "      <td>Newcomer</td>\n",
-       "      <td>promislow d</td>\n",
+       "      <td>promislow de</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>736</th>\n",
@@ -161,13 +161,13 @@
       "text/plain": [
        "     author_id  article_id          name   sex  leading_author  first_author  \\\n",
        "640        659        1669  Promislow DE  Male            True         False   \n",
-       "699        718        1921   Promislow D  Male            True         False   \n",
+       "699        718        1921  Promislow DE  Male            True         False   \n",
        "736        716        1848  Promislow DE  Male            True         False   \n",
        "746        768        1945  Promislow DE  Male            True         False   \n",
        "\n",
        "    career_stage expertise_level    author_key  \n",
        "640    Junior PI        Newcomer  promislow de  \n",
-       "699    Junior PI        Newcomer   promislow d  \n",
+       "699    Junior PI        Newcomer  promislow de  \n",
        "736    Junior PI        Newcomer  promislow de  \n",
        "746    Senior PI        Newcomer  promislow de  "
       ]
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +223,9 @@
     "leading_authors_claims = clean_authors_claims(leading_authors_claims)\n",
     "\n",
     "leading_authors_claims = preprocess_utils.build_author_key(leading_authors_claims, author_name_col=\"Name\", key_col=\"last_author_key\")\n",
+    "# # remove the one with name \"Name\" Promislow D  as promislow DE is there and has the right information\n",
+    "leading_authors_claims = leading_authors_claims[~(leading_authors_claims['last_author_key'] == 'promislow d')]\n",
+    "\n",
     "first_authors_claims = preprocess_utils.build_author_key(first_authors_claims, author_name_col=\"Name\", key_col=\"first_author_key\")"
    ]
   },
@@ -745,7 +748,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>157 rows × 17 columns</p>\n",
+       "<p>156 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -801,7 +804,7 @@
        "162    schneider ds  \n",
        "163     schneider d  \n",
        "\n",
-       "[157 rows x 17 columns]"
+       "[156 rows x 17 columns]"
       ]
      },
      "execution_count": 5,
@@ -842,9 +845,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_33030/333310170.py:31: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_47124/333310170.py:31: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[df[\"Ivy league\"] == 0, \"Ivy league\"] = False\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_33030/1083235099.py:58: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'nan' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_47124/1083235099.py:58: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'nan' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.\n",
       "  first_authors_covar.loc[\n"
      ]
     },
@@ -2505,9 +2508,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_33030/2082296278.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_47124/2082296278.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  leading_authors_covar.loc[leading_authors_covar[\"F and L\"] == 0, \"F and L\"] = False\n",
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_33030/2082296278.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_47124/2082296278.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  leading_authors_covar.loc[leading_authors_covar[\"Historical lab after 1998\"] == 0, \"Historical lab after 1998\"] = False\n"
      ]
     }
@@ -2575,8 +2578,7 @@
     "    print( leading_authors_covar.loc[leading_authors_covar[\"Name\"] == aut_key, \"Continuity\"])\n",
     "    leading_authors_covar.loc[leading_authors_covar[\"Name\"] == aut_key, \"Continuity\"] = True\n",
     "\n",
-    "leading_authors_covar.loc[leading_authors_covar[\"Name\"] == \"Ehret-Sabatier L\", \"Continuity\"] = False\n",
-    "leading_authors_covar.loc[leading_authors_covar[\"Name\"] == \"Tatar M\", \"Continuity\"] = False\n"
+    "leading_authors_covar.loc[leading_authors_covar[\"Name\"] == \"Ehret-Sabatier L\", \"Continuity\"] = False"
    ]
   },
   {
@@ -2763,7 +2765,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>157 rows × 10 columns</p>\n",
+       "<p>156 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2793,7 +2795,7 @@
        "162    <NA>  Male       NaN           NaN    Leading    schneider ds  \n",
        "163    <NA>  Male       NaN           NaN    Leading     schneider d  \n",
        "\n",
-       "[157 rows x 10 columns]"
+       "[156 rows x 10 columns]"
       ]
      },
      "execution_count": 19,
@@ -2989,7 +2991,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>157 rows × 10 columns</p>\n",
+       "<p>156 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3019,7 +3021,7 @@
        "162    <NA>  Male       NaN           NaN    Leading    schneider ds  \n",
        "163    <NA>  Male       NaN           NaN    Leading     schneider d  \n",
        "\n",
-       "[157 rows x 10 columns]"
+       "[156 rows x 10 columns]"
       ]
      },
      "execution_count": 20,
@@ -3039,7 +3041,7 @@
     {
      "data": {
       "text/plain": [
-       "157"
+       "156"
       ]
      },
      "execution_count": 21,
@@ -3103,31 +3105,16 @@
        "      <td>Leading</td>\n",
        "      <td>promislow de</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>Promislow D</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Leading</td>\n",
-       "      <td>promislow d</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Name  Historical lab Historical lab after 1998  Continuity  \\\n",
-       "45   Promislow DE           False                     False       False   \n",
-       "132   Promislow D           False                     False       False   \n",
+       "            Name  Historical lab Historical lab after 1998  Continuity  \\\n",
+       "45  Promislow DE           False                     False       False   \n",
        "\n",
-       "    F and L   Sex Start lab Finish Authorship last_author_key  \n",
-       "45    False  Male      2006   2010    Leading    promislow de  \n",
-       "132   False  Male       NaN    NaN    Leading     promislow d  "
+       "   F and L   Sex Start lab Finish Authorship last_author_key  \n",
+       "45   False  Male      2006   2010    Leading    promislow de  "
       ]
      },
      "execution_count": 22,
@@ -3148,7 +3135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "157 157 157\n"
+      "156 156 156\n"
      ]
     }
    ],
