--- a/preprocess_db.ipynb
+++ b/preprocess_db.ipynb
@@ -2463,7 +2463,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_41322/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_47022/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  authors.loc[authors[\"sex\"] == 1, \"sex\"] = \"Male\"\n"
      ]
     },
@@ -3116,15 +3116,292 @@
    "source": [
     "authors= preprocess_utils.build_author_key(authors, author_name_col=\"name\", key_col=\"author_key\")\n",
     "authors = authors.apply(preprocess_utils.safe_strip)\n",
+    "# replace all Promislow D with Promislow DE and promislow d with promilsow de,\n",
+    "authors.loc[authors[\"author_key\"] == \"promislow d\", \"name\"] = \"Promislow DE\"\n",
+    "authors.loc[authors[\"author_key\"] == \"promislow d\", \"author_key\"] = \"promislow de\"\n",
     "authors.to_csv('preprocessed_data/authors_db.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>leading_author</th>\n",
+       "      <th>first_author</th>\n",
+       "      <th>career_stage</th>\n",
+       "      <th>expertise_level</th>\n",
+       "      <th>author_key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>3096</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>22</td>\n",
+       "      <td>3015</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>44</td>\n",
+       "      <td>2593</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>58</td>\n",
+       "      <td>3052</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>141</td>\n",
+       "      <td>3141</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>143</td>\n",
+       "      <td>2891</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3011</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>195</td>\n",
+       "      <td>2945</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>199</td>\n",
+       "      <td>2978</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>203</td>\n",
+       "      <td>2849</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>211</td>\n",
+       "      <td>3047</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>353</td>\n",
+       "      <td>2976</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Engineer / Technician</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>357</td>\n",
+       "      <td>3014</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>355</td>\n",
+       "      <td>3034</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>463</th>\n",
+       "      <td>476</td>\n",
+       "      <td>2963</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>470</th>\n",
+       "      <td>480</td>\n",
+       "      <td>3004</td>\n",
+       "      <td>Hoffmann JA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Senior PI</td>\n",
+       "      <td>Experienced</td>\n",
+       "      <td>hoffmann ja</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     author_id  article_id         name   sex  leading_author  first_author  \\\n",
+       "10          12        3096  Hoffmann JA  Male            True         False   \n",
+       "19          22        3015  Hoffmann JA  Male            True         False   \n",
+       "35          44        2593  Hoffmann JA  Male            True         False   \n",
+       "46          58        3052  Hoffmann JA  Male            True         False   \n",
+       "133        141        3141  Hoffmann JA  Male            True         False   \n",
+       "135        143        2891  Hoffmann JA  Male            True         False   \n",
+       "170        179        3011  Hoffmann JA  Male            True         False   \n",
+       "185        195        2945  Hoffmann JA  Male            True         False   \n",
+       "188        199        2978  Hoffmann JA  Male            True         False   \n",
+       "209        203        2849  Hoffmann JA  Male            True         False   \n",
+       "237        211        3047  Hoffmann JA  Male            True         False   \n",
+       "344        353        2976  Hoffmann JA  Male            True         False   \n",
+       "345        357        3014  Hoffmann JA  Male            True         False   \n",
+       "351        355        3034  Hoffmann JA  Male            True         False   \n",
+       "463        476        2963  Hoffmann JA  Male            True         False   \n",
+       "470        480        3004  Hoffmann JA  Male            True         False   \n",
+       "\n",
+       "              career_stage expertise_level   author_key  \n",
+       "10               Senior PI     Experienced  hoffmann ja  \n",
+       "19               Senior PI     Experienced  hoffmann ja  \n",
+       "35               Senior PI     Experienced  hoffmann ja  \n",
+       "46               Senior PI     Experienced  hoffmann ja  \n",
+       "133              Senior PI     Experienced  hoffmann ja  \n",
+       "135              Senior PI     Experienced  hoffmann ja  \n",
+       "170              Senior PI     Experienced  hoffmann ja  \n",
+       "185              Senior PI     Experienced  hoffmann ja  \n",
+       "188              Senior PI     Experienced  hoffmann ja  \n",
+       "209              Senior PI     Experienced  hoffmann ja  \n",
+       "237              Senior PI     Experienced  hoffmann ja  \n",
+       "344  Engineer / Technician     Experienced  hoffmann ja  \n",
+       "345              Senior PI     Experienced  hoffmann ja  \n",
+       "351              Senior PI     Experienced  hoffmann ja  \n",
+       "463              Senior PI     Experienced  hoffmann ja  \n",
+       "470              Senior PI     Experienced  hoffmann ja  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "authors[authors[\"author_key\"] == \"hoffmann ja\"]"
+   ]
   }
  ],
  "metadata": {
